# elastic_search_cheatsheet

./: .gitignore  000_install.md  001_dev_tools.md  002_navigation_in_es.es  003_search_1.es  003_search_in_getting_start.es  004_post_data.es  005_build_custom_mapping.es  006_insert_file.es  007_query101.es  008_settings101.es  MEMO.md  README.md
addtional/: building_index.md  function_score.md  how_search_performed.md  words.md
application/: autocomplete.md
application/autocompletion/: README.md  index.json  index_read_fast.json  insert.ipynb  pyproject.toml  search.sh  survey.md
application/autocompletion/derpecated/: search.py
application/autocompletion/search_app/backend/: api.py
application/autocompletion/search_app/frontend/: app.py
application/autocompletion/search_app/frontend/templates/: home.html
udemy/chp1/: 4_overview.md  5_review_http_and_restful.md
udemy/chp2/: 17_analyser.md  18_import_single.es  19_import_many.es  20_update_data.es  20_update_many.es  20_update_single.es  21_delete_data.es  23_concurrency.es  23_concurrency.md  24_analyzer_and_tokenizer.md  25_data_model.es  25_data_modeling.md  27_flattened_datatype.md
udemy/chp3/: 31_query_lite.md  32_json_search.es  32_json_search.md  33_phrase.es  35_sorting.es  39_fuzzy_query.es  39_fuzzy_query.md  40_partial_matching.es  40_partial_matching.md  41_query_time_search_as_you_type.es  41_query_time_search_as_you_type.md  41_search_as_you_type.es  41_search_as_you_type.md  42_ngram.es  42_ngram.md  44_search_as_you_type.es  44_search_as_you_type.md
udemy/chp4/: generate_big_json.py  (+1 more)
(+16 files in other folders)
